--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-manifest": "^4.21.0",
     "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-source-contentful": "^7.19.1",
     "gatsby-source-filesystem": "^4.21.0",
     "gatsby-transformer-sharp": "^4.21.0",
     "prop-types": "^15.8.1",
