--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@babel/runtime": "^7.18.9",
+    "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.21.0",
     "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-manifest": "^4.21.0",
     "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-styled-components": "^5.21.0",
     "gatsby-source-contentful": "^7.19.1",
-    "gatsby-source-filesystem": "^4.21.0",
+    "gatsby-source-filesystem": "^4.21.1",
     "gatsby-transformer-sharp": "^4.21.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
