--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
