--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^4.21.0",
     "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-manifest": "^4.21.0",
+    "gatsby-plugin-paypal": "^1.1.6",
     "gatsby-plugin-sharp": "^4.21.0",
     "gatsby-plugin-styled-components": "^5.21.0",
     "gatsby-source-contentful": "^7.19.1",
@@ -19,6 +20,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-script-tag": "^1.1.2",
     "styled-components": "^5.3.5",
     "util": "^0.12.4"
   },
