--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@babel/runtime": "^7.18.9",
+    "@paypal/paypal-js": "^5.1.1",
+    "@paypal/react-paypal-js": "^7.8.1",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.21.0",
     "gatsby-plugin-image": "^2.21.0",
