Fixed aligning issues with PrayerTimes component and added device detection to adjust mobile layout

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-transformer-sharp": "^4.21.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-script-tag": "^1.1.2",
